rancher/3.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: cattle-system
  labels:
    app: rancher
spec:
  selector:
    app: rancher
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
